[gd_scene load_steps=14 format=3 uid="uid://kcdqoodgn5d"]

[ext_resource type="PackedScene" uid="uid://rhc07kmkvdyc" path="res://assets/models/padlock1/scene.gltf" id="1_nqq65"]
[ext_resource type="Script" path="res://src/hospital/password_lock/password_lock_root.gd" id="2_ho5gl"]
[ext_resource type="Script" path="res://src/hospital/password_lock/password_lock_mechanics.gd" id="2_k6e8e"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_u686a"]
noise_type = 4
frequency = 0.758

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_v78pd"]
noise = SubResource("FastNoiseLite_u686a")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fmk0c"]
albedo_color = Color(0.25098, 0.14902, 0.105882, 1)
metallic = 0.99
metallic_specular = 0.95
roughness_texture = SubResource("NoiseTexture2D_v78pd")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_axhdq"]
metallic = 1.0
metallic_specular = 0.17
roughness = 0.14

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_gpblm"]
points = PackedVector3Array(0.26647, 0.11799, 0.14216, -0.276392, -0.0991418, -0.147371, -0.260266, -0.127139, -0.13938, -0.289997, -0.0946201, 0.157563, 0.166764, -0.245385, 0.142301, 0.183106, 0.245977, -0.154732, -0.185862, 0.246036, 0.148087, 0.183106, -0.245977, -0.154732, -0.17747, 0.234844, -0.147629, -0.185862, -0.246036, 0.148087, 0.275043, -0.0996492, -0.148132, 0.0214345, 0.292499, 0.143083, -0.0242147, -0.292108, -0.140062, -0.289997, 0.0946201, 0.157563, 0.272349, -0.0986777, 0.149506, -0.0242148, 0.292109, -0.140062, -0.276391, 0.0991415, -0.147371, 0.173707, 0.233446, 0.149609, 0.0120355, -0.287562, 0.14969, 0.275043, 0.099649, -0.148132, -0.17747, -0.234844, -0.147629, 0.0214345, -0.292499, 0.143083, 0.272348, 0.0986777, 0.149506, 0.266465, -0.117988, 0.142158, -0.0241811, -0.291678, 0.142685, -0.0241807, 0.291674, 0.142683, 0.0211749, 0.289171, -0.147688, 0.0211742, -0.289162, -0.147683, 0.166764, 0.245385, 0.142301, 0.0120355, 0.287562, 0.14969, -0.260266, 0.127139, -0.13938, 0.173707, -0.233446, 0.149609)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nqnke"]
albedo_color = Color(1, 0.721569, 0.301961, 1)
metallic = 1.0
roughness = 0.4
emission = Color(0.819608, 0.686275, 0.156863, 1)
emission_energy_multiplier = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b5a5t"]
albedo_color = Color(1, 0.721569, 0.301961, 1)
metallic = 1.0
roughness = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ukpug"]
albedo_color = Color(1, 0.721569, 0.301961, 1)
metallic = 1.0
roughness = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1ngy0"]
albedo_color = Color(1, 0.721569, 0.301961, 1)
metallic = 1.0
roughness = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_31ihg"]
albedo_color = Color(1, 0.721569, 0.301961, 1)
metallic = 1.0

[node name="scene" instance=ExtResource("1_nqq65")]
script = ExtResource("2_ho5gl")

[node name="GLTF_SceneRootNode" parent="Sketchfab_model/root" index="0"]
script = ExtResource("2_k6e8e")

[node name="Object_4" parent="Sketchfab_model/root/GLTF_SceneRootNode/Box_0" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_fmk0c")

[node name="Object_11" parent="Sketchfab_model/root/GLTF_SceneRootNode/Lock_1" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_axhdq")

[node name="Area3D" type="Area3D" parent="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace5_2/Object_13" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace5_2/Object_13/Area3D" index="0"]
shape = SubResource("ConvexPolygonShape3D_gpblm")

[node name="Object_14" parent="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace5_2" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_nqnke")

[node name="Area3D" type="Area3D" parent="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace1_3/Object_16" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace1_3/Object_16/Area3D" index="0"]
shape = SubResource("ConvexPolygonShape3D_gpblm")

[node name="Object_17" parent="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace1_3" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_b5a5t")

[node name="Area3D" type="Area3D" parent="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace2_4/Object_19" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace2_4/Object_19/Area3D" index="0"]
shape = SubResource("ConvexPolygonShape3D_gpblm")

[node name="Object_20" parent="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace2_4" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_ukpug")

[node name="Area3D" type="Area3D" parent="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace3_5/Object_22" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace3_5/Object_22/Area3D" index="0"]
shape = SubResource("ConvexPolygonShape3D_gpblm")

[node name="Object_23" parent="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace3_5" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_1ngy0")

[node name="Area3D" type="Area3D" parent="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace4_6/Object_25" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace4_6/Object_25/Area3D" index="0"]
shape = SubResource("ConvexPolygonShape3D_gpblm")

[node name="Object_26" parent="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace4_6" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_31ihg")

[connection signal="input_event" from="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace5_2/Object_13/Area3D" to="Sketchfab_model/root/GLTF_SceneRootNode" method="_on_slot5_input"]
[connection signal="input_event" from="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace1_3/Object_16/Area3D" to="Sketchfab_model/root/GLTF_SceneRootNode" method="_on_slot1_input"]
[connection signal="input_event" from="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace2_4/Object_19/Area3D" to="Sketchfab_model/root/GLTF_SceneRootNode" method="_on_slot2_input"]
[connection signal="input_event" from="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace3_5/Object_22/Area3D" to="Sketchfab_model/root/GLTF_SceneRootNode" method="_on_slot3_input"]
[connection signal="input_event" from="Sketchfab_model/root/GLTF_SceneRootNode/ClockFace4_6/Object_25/Area3D" to="Sketchfab_model/root/GLTF_SceneRootNode" method="_on_slot4_input"]
